--- a/index.html
+++ b/index.html
@@ -946,6 +946,7 @@
             align-items: center;
             justify-content: center;
             overflow: visible;
+            margin: 0 auto;
         }
 
         .walls-container {
@@ -973,6 +974,7 @@
             position: absolute;
             display: flex;
             align-items: center;
+            justify-content: center;
             width: 100%;
             height: 100%;
             z-index: 1;
@@ -986,14 +988,23 @@
             position: absolute;
             max-height: 100%;
             max-width: 55%;
+            width: auto;
+            height: auto;
+            transform-origin: center center;
         }
 
         #leftPicture {
             right: calc(50% + 20px);
+            transform: translateX(0);
+            max-width: 55%;
+            max-height: 100%;
         }
 
         #rightPicture {
             left: calc(50% + 20px);
+            transform: translateX(0);
+            max-width: 55%;
+            max-height: 100%;
         }
 
         .earthquake {
@@ -1168,6 +1179,24 @@
         }
 
         /* Responsive adjustments */
+        @media (max-width: 768px) {
+            .picture-half {
+                max-width: 48%;
+                max-height: 95%;
+            }
+
+            #leftPicture,
+            #rightPicture {
+                max-width: 48%;
+                max-height: 95%;
+            }
+
+            .wall-container {
+                width: 92%;
+                height: 55vh;
+            }
+        }
+
         @media (max-width: 900px) {
             .gate-container {
                 padding: 25px 20px;
@@ -1246,6 +1275,23 @@
 
             .wall-section {
                 padding: 60px 15px;
+            }
+
+            .wall-container {
+                width: 95%;
+                height: 60vh;
+                max-height: 500px;
+            }
+
+            .picture-half {
+                max-width: 48%;
+                max-height: 90%;
+            }
+
+            #leftPicture,
+            #rightPicture {
+                max-width: 48%;
+                max-height: 90%;
             }
         }
 
@@ -1382,6 +1428,30 @@
                 font-size: 0.8rem;
                 padding: 4px 12px;
             }
+
+            .wall-container {
+                width: 95%;
+                height: 50vh;
+                max-height: 400px;
+            }
+
+            .picture-half {
+                max-width: 45%;
+                max-height: 85%;
+            }
+
+            #leftPicture,
+            #rightPicture {
+                max-width: 45%;
+                max-height: 85%;
+            }
+
+            .sweet-message {
+                bottom: -90px;
+                font-size: 1rem;
+                padding: 12px;
+                max-width: 90%;
+            }
         }
 
         @media (max-width: 350px) {
@@ -1406,6 +1476,29 @@
             .gate-image {
                 width: 70px;
                 height: 70px;
+            }
+
+            .wall-container {
+                width: 98%;
+                height: 45vh;
+                max-height: 350px;
+            }
+
+            .picture-half {
+                max-width: 48%;
+                max-height: 80%;
+            }
+
+            #leftPicture,
+            #rightPicture {
+                max-width: 48%;
+                max-height: 80%;
+            }
+
+            .sweet-message {
+                bottom: -100px;
+                font-size: 0.9rem;
+                padding: 10px;
             }
         }
 
@@ -1442,6 +1535,51 @@
             .submit-btn {
                 margin-top: 15px;
                 padding: 10px 20px;
+            }
+
+            .wall-container {
+                height: 80vh;
+                max-height: 500px;
+            }
+
+            .picture-half {
+                max-width: 40%;
+                max-height: 90%;
+            }
+
+            #leftPicture,
+            #rightPicture {
+                max-width: 40%;
+                max-height: 90%;
+            }
+
+            .sweet-message {
+                bottom: -60px;
+                font-size: 0.85rem;
+                padding: 8px;
+            }
+        }
+
+        @media (max-width: 400px) and (max-height: 700px) {
+            .wall-container {
+                height: 45vh;
+                max-height: 380px;
+            }
+
+            .picture-half {
+                max-width: 46%;
+                max-height: 85%;
+            }
+
+            #leftPicture,
+            #rightPicture {
+                max-width: 46%;
+                max-height: 85%;
+            }
+
+            .controls button {
+                padding: 10px 20px;
+                font-size: 1rem;
             }
         }
     </style>
@@ -2213,6 +2351,10 @@
 
                 leftPicture.style.right = `calc(50% + ${distanceFromCenter}px)`;
                 rightPicture.style.left = `calc(50% + ${distanceFromCenter}px)`;
+
+                // Ensure both images maintain consistent sizing
+                leftPicture.style.transform = 'translateX(0)';
+                rightPicture.style.transform = 'translateX(0)';
             }
 
             function updateButtonState() {
@@ -2257,6 +2399,10 @@
 
                 leftPicture.style.right = '50%';
                 rightPicture.style.left = '50%';
+
+                // Ensure both images maintain consistent sizing when joined
+                leftPicture.style.transform = 'translateX(0)';
+                rightPicture.style.transform = 'translateX(0)';
 
                 setTimeout(() => {
                     leftPicture.classList.add('join-effect');
