--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Secret Message Portal - Security Gate</title>
 
-    <!-- Prevent social media previews -->
-    <meta name="robots" content="noindex, nofollow">
-    <meta property="og:title" content="">
-    <meta property="og:description" content="">
-    <meta property="og:image" content="">
-    <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="">
-    <meta name="twitter:description" content="">
-    <meta name="twitter:image" content="">
+ <!-- Prevent search engines from indexing -->
+  <meta name="robots" content="noindex, nofollow">
 
+  <!-- Open Graph (Facebook, Instagram, Messenger) -->
+  <meta property="og:title" content=" " />
+  <meta property="og:description" content=" " />
+  <meta property="og:image" content=" " />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content=" " />
+  <meta name="twitter:description" content=" " />
+  <meta name="twitter:image" content=" " />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -2433,3 +2436,4 @@
 </body>
 
 </html>
+
