--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
  <!-- Prevent search engines from indexing -->
   <meta name="robots" content="noindex, nofollow">
 
-  <!-- Open Graph (Facebook, Instagram, Messenger) -->
+  <!-- Open Graph -->
   <meta property="og:title" content=" " />
   <meta property="og:description" content=" " />
   <meta property="og:image" content=" " />
   <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://example.com/placeholder" />
 
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary" />
@@ -2436,4 +2437,5 @@
 </body>
 
 </html>
+
 
