--- a/index.html
+++ b/index.html
@@ -1797,6 +1797,7 @@
                     <div class="popup-content">
                         <h2>EARTHQUAKE!</h2>
                         <p>Oh no, earthquake earthquake!</p>
+                        <p>The wall has collapsed</p>
                     </div>
                 </div>
             </div>
@@ -2455,6 +2456,7 @@
 </body>
 
 </html>
+
 
 
 
